--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/socket.io-client": "^3.0.0",
+    "axios": "^0.27.2",
+    "dayjs": "^1.11.3",
+    "jwt-decode": "^3.1.2",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-icons": "^4.4.0",
+    "react-toastify": "^9.0.3",
     "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
