--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
     "react-toastify": "^9.0.3",
-    "socket.io-client": "^4.5.1"
+    "socket.io-client": "^4.5.1",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@types/node": "17.0.39",
